# sentencepiece-jni

./: .travis.yml  LICENSE  README.md  pom-windows.xml  pom.xml
.github/workflows/: build.yml  publish.yml
src/main/java/com/github/google/sentencepiece/: NativeLibLoader.java  SentencePieceJNI.java  SentencePieceProcessor.java
src/main/native/: CMakeLists.txt  com_github_google_sentencepiece_SentencePieceJNI.cc  com_github_google_sentencepiece_SentencePieceJNI.h
src/main/native/windows/: CMakeLists.txt
src/test/java/com/github/google/sentencepiece/: SentencePieceProcessorTest.java
